<resources>
    <string name="app_name">ULinkChatBot</string>
    <string name="AppName">ULinK</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="email_or_username">Email or Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account_nsign_up">Don\'t have an account?\nSign Up</string>
    <string name="login">Login</string>
    <string name="signup_with">SignUp with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="create_nnew_account">Create \nNew Account</string>
    <string name="register">Register</string>
</resources>