<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1D1D"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="45dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_back"/>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:background="@drawable/enter_section"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_or_username"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="#626262"
                android:textColorHint="@color/white">
                <EditText
                    android:id="@+id/email_or_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/enter_section"
                    android:inputType="textEmailAddress"
                    android:textSize="17sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:background="@drawable/enter_section"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_password"
                android:textColorHint="@color/white"
                app:startIconTint="#626262"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:startIconDrawable="@drawable/mail">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:background="@drawable/enter_section"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:text="@string/login"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/next_button"
                android:layout_marginTop="45dp"
                android:layout_marginStart="215dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_with"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:layout_marginStart="165dp"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginStart="80dp">

            <ImageView
                android:id="@+id/google_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/google"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/apple_id"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/facebook"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/don_t_have_an_account_nsign_up"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="-100dp"
                android:src="@drawable/next_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>