<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D1D1D"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/create_nnew_account"/>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:background="@drawable/enter_section"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_username"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="#626262"
                android:textColorHint="@color/white">
                <EditText
                    android:id="@+id/enter_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/enter_section"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:background="@drawable/enter_section"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_email"
                android:textColorHint="@color/white"
                app:startIconTint="#626262"
                app:startIconDrawable="@drawable/mail">
                <EditText
                    android:id="@+id/enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:textSize="17sp"
                    android:fontFamily="@font/poppins_regular"
                    android:background="@drawable/enter_section"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:autofillHints="emailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:background="@drawable/enter_section"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PassInLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/group_2"
                app:startIconTint="#626262"
                app:counterMaxLength="20"
                android:hint="@string/enter_password"
                android:textColorHint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/enter_section"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:background="@drawable/enter_section"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPassInLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/group_2"
                app:startIconTint="#626262"
                app:counterMaxLength="20"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/enter_section"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/next_button"
                android:layout_marginStart="170dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signup_with"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:layout_marginStart="165dp"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginStart="80dp">

            <ImageView
                android:id="@+id/google_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/google"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/apple_id"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/facebook"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="167dp"
            android:rotation="180"
            android:src="@drawable/next_button" />
    </LinearLayout>
</ScrollView>